# Mini-Autograd

./: .gitignore  LICENSE  pyproject.toml
mini_autograd/: micrograd.py
