[project]
name = "mini-autograd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "ipython>=9.15.0",
    "jupytext>=1.19.4",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "regex>=2026.5.9",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.13.0",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
]
